<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<!-- Main -->
	<string name="app_name">Minitrainer</string>
	<string name="app_logo">Minitrainer_logo</string>
	<string name="menu_settings">Settings</string>
    <string name="button_exDiets">Exercises and Diets</string>
    <string name="button_prof">Profile</string>
    <string name="button_activities">Activities</string>
    <string name="button_prefs">Preferences</string>
    
    <!-- Tabs Main -->
    <string name="title_activity_tabbed">Minitrainer</string>
    
		<!-- Tab 1 -->
   		<string name="text_tab1">Do you want to exercise or look up a diet?</string>
   		<string name="text_exButton">Exercises</string>
    	<string name="text_dButton">Diets</string>
    
		<!-- Tab 2 -->
		<string name="text_tab2">Profile</string>
		<string name ="hint_height">Height in cms</string>
    	<string name ="hint_weight">Weight in kgs</string>
    	<string name="button_bmi">Calculate BMI</string>
    	<string name="default_BMI">N/A</string>
	    <string name="text_heightEx">e.g. 186 (cm)</string>
    	<string name="text_weightEx">e.g. 76.4 (kg)</string>
		<string name="text_bmiTag">BMI:</string>
		<string name="hint_minsEx">Time spent exercising per day (mins)</string>
		<string name="hint_calories">Calories consumed per day?</string>
    	<string name="button_feedback">Assess</string>
    	<string name="default_feedback">No feedback yet</string>
    	
		<!-- Tab 3 -->
		<string name="text_tab3">Activities</string>
	

	<!-- Test -->
    <string name="out">txview</string>
    <string name="title_activity_profile">Profile</string>

</resources>